removed image folder references

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="Images/circle-cropped.png" alt="Ben's Profile Picture"></td>
+      <td> <img src="circle-cropped.png" alt="Ben's Profile Picture"></td>
       <td>
         <h1>Ben Yeates</h1>
         <p><em>Purveryor of <strong> Life</strong></em></p>
@@ -28,7 +28,7 @@
   <h3><a href="hobbies.html">Hobbies</a></h3>
   <ol type="i">
     <li>Cycling</li>
-    <img src="Images/Cycling1.png" alt="Picture of Ben Cycling in Amsterdam"> <img src="Images/Cycling2.png" alt="Picture of Ben Cycling in Vancouver"> <img src="Images/Cycling3.png" alt="Bens Specialized E-Bike">
+    <img src="Cycling1.png" alt="Picture of Ben Cycling in Amsterdam"> <img src="Cycling2.png" alt="Picture of Ben Cycling in Vancouver"> <img src="Cycling3.png" alt="Bens Specialized E-Bike">
     <li>Spearfishing</li>
     <li>Dogs</li>
     <li>Travel</li>
