spacing around hobby pictures

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <li><a href="https://www.wolvcoll.ac.uk/">City of Wolverhampton College</a></li>
   </ul>
   <hr>
-  <h3><a href="hobbies.html">Hobbies</a></h3>
+  <h3><a href="hobbies.html">Hobbies</a></h3><br>
   <ol type="i">
-    <li>Cycling</li>
-    <img src="Cycling1.png" alt="Picture of Ben Cycling in Amsterdam"> <img src="Cycling2.png" alt="Picture of Ben Cycling in Vancouver"> <img src="Cycling3.png" alt="Bens Specialized E-Bike">
+    <li>Cycling</li><br>
+    <img src="Cycling1.png" alt="Picture of Ben Cycling in Amsterdam"> <img src="Cycling2.png" alt="Picture of Ben Cycling in Vancouver"> <img src="Cycling3.png" alt="Bens Specialized E-Bike"><br>
     <li>Spearfishing</li>
     <li>Dogs</li>
     <li>Travel</li>
